[package]
name = "jasper"
version = "1.0.1"
edition = "2021"
authors = ["jiangchen"]
email = ["jiangchen2@genomics.cn/cherryamme@qq.com"]
description = "(2024-12-5) jasper: used to split long read fastq/gz data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
bio = "1.6.0"
env_logger = "0.11.3"
pretty_env_logger = "0.5.0"
log = "0.4.21"
flate2 = "1.0.30"
flume = "0.11.0"
csv = "1.3.0"
age = "0.11.0"
